--- a/arch/arm/configs/c.o.h._v1_q1_defconfig
+++ b/arch/arm/configs/c.o.h._v1_q1_defconfig
@@ -3037,7 +3037,7 @@ CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
-CONFIG_FTRACE=y
+# CONFIG_FTRACE is not set
 CONFIG_FUNCTION_TRACER=y
 CONFIG_FUNCTION_GRAPH_TRACER=y
 # CONFIG_IRQSOFF_TRACER is not set
