--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -2,7 +2,6 @@
 # Automatically generated make config: don't edit
 # Linux/arm 3.0.31 Kernel Configuration
 #
-CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
 CONFIG_EXYNOS4_SETUP_I2C5=y
 CONFIG_SCSI_DMA=y
@@ -106,7 +105,6 @@ CONFIG_CRYPTO_HMAC=y
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_VIDEO_FIMC_MIPI=y
 CONFIG_HDMI_HPD=y
-CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_IP6_NF_TARGET_LOG=y
 CONFIG_IP_NF_ARPTABLES=y
@@ -128,7 +126,6 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_TIMERFD=y
 CONFIG_HID_THRUSTMASTER=y
-CONFIG_TRACEPOINTS=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_NET_EMATCH_STACK=32
 CONFIG_BOUNCE=y
@@ -196,7 +193,6 @@ CONFIG_BCM4330=y
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_BUG=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_PM=y
 CONFIG_SPI=y
 CONFIG_NF_CONNTRACK_IRC=y
@@ -236,7 +232,6 @@ CONFIG_USE_TVOUT_CMA=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_ARCH_SKIP_SECONDARY_CALIBRATE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_EVENT_TRACING=y
 CONFIG_HID_CYPRESS=y
 CONFIG_ACCESSORY=y
 CONFIG_NLS_ISO8859_1=y
@@ -254,7 +249,6 @@ CONFIG_NETDEVICES=y
 CONFIG_NET_KEY=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_S3C_DEV_I2C5=y
-CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPU_TLB_V7=y
 CONFIG_EVENTFD=y
@@ -302,7 +296,6 @@ CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
-CONFIG_FUNCTION_PROFILER=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_EXYNOS4_SETUP_FB_S5P=y
 CONFIG_DEFAULT_CFQ=y
@@ -352,7 +345,6 @@ CONFIG_HAVE_GENERIC_HARDIRQS=y
 CONFIG_BINFMT_ELF=y
 CONFIG_SCSI_PROC_FS=y
 CONFIG_HOTPLUG=y
-CONFIG_SCHED_TRACER=y
 CONFIG_INET6_AH=y
 CONFIG_CPU_CP15=y
 CONFIG_S3C24XX_PWM=y
@@ -409,7 +401,6 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_CPU_HAS_ASID=y
 CONFIG_USB_GADGET=y
 CONFIG_SOUND=y
-CONFIG_EVENT_POWER_TRACING_DEPRECATED=y
 CONFIG_SENSORS_K3DH=y
 CONFIG_S3C_BOOT_UART_FORCE_FIFO=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -447,7 +438,6 @@ CONFIG_S3C_DEV_ADC=y
 CONFIG_CSI_C=y
 CONFIG_S5P_DEV_FIMD0=y
 CONFIG_LOG_BUF_SHIFT=18
-CONFIG_OLD_MCOUNT=y
 CONFIG_PANEL_U1=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_CACHE_L2X0=y
@@ -478,9 +468,7 @@ CONFIG_HAVE_LATENCYTOP_SUPPORT=y
 CONFIG_TMPFS_XATTR=y
 CONFIG_S3C_DEV_I2C11_EMUL=y
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
-CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_UMP_MEM_SIZE=1024
-CONFIG_GENERIC_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_NF_NAT_TFTP=y
 CONFIG_OUTER_CACHE=y
@@ -559,7 +547,6 @@ CONFIG_ARM_ERRATA_753970=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_MFD_MAX8997=y
-CONFIG_NOP_TRACER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_INET=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
@@ -649,10 +636,9 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-N7000-c.o.h."
+CONFIG_LOCALVERSION=""
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
-CONFIG_FUNCTION_TRACER=y
 CONFIG_SCHED_DEBUG=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_S3C_DEV_I2C7=y
@@ -685,7 +671,6 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_SAMSUNG_IRQ_UART=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_VIDEO_DEV=y
-CONFIG_DYNAMIC_FTRACE=y
 CONFIG_EXYNOS_MCT=y
 CONFIG_HAS_DMA=y
 CONFIG_NF_CT_PROTO_SCTP=y
@@ -695,7 +680,6 @@ CONFIG_VIDEO_MALI400MP_DVFS=y
 CONFIG_SCSI=y
 CONFIG_GPIO_EXYNOS4=y
 CONFIG_FB_CFB_FILLRECT=y
-CONFIG_FUNCTION_GRAPH_TRACER=y
 CONFIG_NF_NAT_PPTP=y
 CONFIG_SAMSUNG_GPIO_EXTRA=0
 CONFIG_HID_CHICONY=y
@@ -711,7 +695,6 @@ CONFIG_LOCALVERSION_AUTO=y
 CONFIG_EHCI_IRQ_DISTRIBUTION=y
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_USB_CDFS_SUPPORT=y
-CONFIG_FTRACE=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_ARPFILTER=y
@@ -758,7 +741,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_FRAME_WARN=1024
 CONFIG_RCU_CPU_STALL_VERBOSE=y
 CONFIG_GENERIC_HWEIGHT=y
-CONFIG_INITRAMFS_SOURCE="/home/ali/android/kernel/n7000_tw_jb_kernel/initramfs"
+CONFIG_INITRAMFS_SOURCE=""
 CONFIG_CGROUPS=y
 CONFIG_MMC=y
 CONFIG_VIDEO_MFC_MEM_PORT_COUNT=2
@@ -801,11 +784,9 @@ CONFIG_MMC_SDHCI_S3C_DMA=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_ARM_ERRATA_754322=y
 CONFIG_FB=y
-CONFIG_TRACING=y
 CONFIG_I2C_COMPAT=y
 CONFIG_CPU_32v7=y
 CONFIG_EXYNOS4_SETUP_I2C1=y
-CONFIG_FTRACE_MCOUNT_RECORD=y
 CONFIG_MSDOS_PARTITION=y
 CONFIG_BT_HCIUART=y
 CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=1
@@ -923,10 +904,8 @@ CONFIG_USE_MFC_CMA=y
 CONFIG_FB_CFB_COPYAREA=y
 CONFIG_MALI_OSMEM_ONLY=y
 CONFIG_EXYNOS4_PM=y
-CONFIG_BINARY_PRINTF=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
-CONFIG_TRACER_MAX_TRACE=y
 CONFIG_VIDEO_V4L2=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_HID_NTRIG=y
@@ -975,7 +954,6 @@ CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_LEDS_CLASS=y
 CONFIG_GENERIC_HARDIRQS=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
-CONFIG_INITRAMFS_COMPRESSION_GZIP=y
 CONFIG_RTC_INTF_DEV=y
 CONFIG_SAMSUNG_IRQ_VIC_TIMER=y
 CONFIG_HID_SUPPORT=y
